--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,47 @@ body{
  }
 
 
+
+
+ /* responsive for mobile devices */
+ 
+ @media screen and (max-width: 667px) {
+
+    .first, .d-flex{
+        background-color: ;
+        display: flex!important;
+        flex-direction: column;
+    }
+   .second, .imran, img .photo, .card{
+        display: block;
+        background-color:;
+        height: 15rem;
+        width: 14rem;
+    }   
+    .eight{
+
+        display: none;
+    } 
+    
+   imran{
+    display: flex;
+    flex-direction: column-reverse;
+   }
+} 
+
+ /* responsive for tab and tablet devices */
+
+ @media  screen (min-width: 668px) and (max-width: 1023px) {
+
+        
+ }
+    
+ 
+
+
+
+
+
+
+
+    
